<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cc_white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/logo" />

    <TextView
        android:id="@+id/userNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:paddingTop="6dp"
        android:text="@string/logo_userName"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/login_id"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:singleLine="true" />

    <TextView
        android:id="@+id/passWordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/logo_passWordName"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/passWord"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/ck"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/logo_save"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/login"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/cc_orage_red"
            android:text="@string/login"
            android:textColor="@color/cc_white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/register"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/register"
            android:textSize="20sp"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>
