<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:padding="10dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:padding="6dp"
            android:gravity="center"
            android:text="@string/modificationtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/modification_ll"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="6dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16sp"
            android:text="新密码："
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/modification_psd"
            android:textSize="16sp"
            android:padding="4dp"
            android:background="@null"
            android:inputType="textPassword"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/modification_iv"
            android:layout_marginRight="6dp"
            android:padding="6dp"
            android:src="@mipmap/modification_invisiable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_height="wrap_content">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/cc_dark_fade"/>
    </LinearLayout>
    <LinearLayout
        android:background="@color/white"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center"
            android:text="@string/modificationtip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_margin="20dp"
            android:id="@+id/mine_compelet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_btn_exit"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/report_delete_ok"
            android:textColor="@color/cc_white"
            android:textSize="20sp" />



    </LinearLayout>


    <LinearLayout
        android:visibility="gone"
        android:id="@+id/modification_progressbar"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/shape_modification_pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateDrawable="@drawable/progress_loading"
            />

    </LinearLayout>

</LinearLayout>