<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp">

        <TextView
            android:id="@+id/tv_send_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="6dp"
            android:text="病害明细"
            android:textColor="@color/cc_red"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/tv_send_detail_reporter_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_send_detail_name"
            android:layout_marginTop="6dp"
            android:text="上报人："
            android:textColor="@color/cc_text_blank"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_send_detail_reporter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_send_detail_name"
            android:layout_marginTop="6dp"
            android:layout_toRightOf="@id/tv_send_detail_reporter_title"
            android:text="张谋面"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_send_detail_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_send_detail_reporter_title"
            android:layout_marginTop="6dp"
            android:text="@string/report_dealgrade"
            android:textColor="@color/cc_text_blank"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_send_detail_diseasename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_send_detail_reporter_title"
            android:layout_marginTop="6dp"
            android:layout_toRightOf="@id/tv_send_detail_name_title"
            android:text="一级病害"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_send_detail_grade_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_send_detail_name_title"
            android:layout_marginTop="6dp"
            android:text="@string/report_dealcategory"
            android:textColor="@color/cc_text_blank"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_send_detail_grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_send_detail_name_title"
            android:layout_marginTop="6dp"
            android:layout_toRightOf="@id/tv_send_detail_grade_title"
            android:text="违章施工"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_send_detail_dealtype_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_send_detail_grade_title"
            android:layout_marginTop="6dp"
            android:text="@string/report_facategory"
            android:textColor="@color/cc_text_blank"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_send_detail_dealtype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_send_detail_grade_title"
            android:layout_marginTop="6dp"
            android:layout_toRightOf="@id/tv_send_detail_dealtype_title"
            android:text="违章施工"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/tv_send_detail_fatype_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_send_detail_dealtype"
            android:layout_marginTop="6dp"
            android:text="@string/report_faname"
            android:textColor="@color/cc_text_blank"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_send_detail_fatype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_send_detail_dealtype"
            android:layout_marginTop="6dp"
            android:layout_toRightOf="@id/tv_send_detail_fatype_title"
            android:text="步道"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_send_detail_pbtype_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_send_detail_fatype"
            android:layout_marginTop="6dp"
            android:text="@string/report_pbtype"
            android:textColor="@color/cc_text_blank"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_send_detail_pbtype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_send_detail_fatype"
            android:layout_marginTop="6dp"
            android:layout_toRightOf="@id/tv_send_detail_grade_title"
            android:text="塌陷"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_send_detail_reporteplace_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_send_detail_pbtype"
            android:layout_marginTop="6dp"
            android:text="@string/report_roadname"
            android:textColor="@color/cc_text_blank"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_send_detail_reporteplace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_send_detail_pbtype"
            android:layout_marginTop="6dp"
            android:layout_toRightOf="@id/tv_send_detail_grade_title"
            android:text="西环路"
            android:maxLines="2"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_send_detail_faname_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_send_detail_reporteplace"
            android:layout_marginTop="6dp"
            android:text="@string/report_facility"
            android:textColor="@color/cc_text_blank"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_send_detail_faname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_send_detail_reporteplace"
            android:layout_marginTop="6dp"
            android:layout_toRightOf="@id/tv_send_detail_grade_title"
            android:text="彩砖"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_send_detail_fasize_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_send_detail_faname"
            android:layout_marginTop="6dp"
            android:text="病害位置："
            android:textColor="@color/cc_text_blank"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_send_detail_loca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_send_detail_faname"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@color/cc_supervise"
            android:layout_toRightOf="@id/tv_send_detail_grade_title"
            android:text="点击查看"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_send_detail_reportetime_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_send_detail_loca"
            android:layout_marginTop="6dp"
            android:text="上报时间："
            android:textColor="@color/cc_text_blank"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_send_detail_reportetime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_send_detail_loca"
            android:layout_marginTop="6dp"
            android:layout_toRightOf="@id/tv_send_detail_grade_title"
            android:text="2017年3月2日16:45:06"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/tv_send_detail_address_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_send_detail_reportetime"
            android:layout_marginTop="6dp"
            android:text="位置描述："
            android:textColor="@color/cc_text_blank"
            android:textSize="20sp" />

        <FrameLayout
            android:layout_marginTop="6dp"
            android:id="@+id/tv_send_detail_address1"
            android:layout_below="@+id/tv_send_detail_reportetime"
            android:layout_toRightOf="@+id/tv_send_detail_address_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:visibility="gone"
                android:background="@drawable/selector_tv_audio"
                android:id="@+id/tv_send_problem_audio"
                android:layout_width="120dp"
                android:layout_height="28dp"
                android:gravity="center"
                android:drawableRight="@mipmap/play"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_send_detail_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp" />

        </FrameLayout>

        <TextView
            android:layout_marginTop="6dp"
            android:layout_below="@+id/tv_send_detail_address1"
            android:id="@+id/tv_send_detail_diseasedestitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/cc_text_blank"
            android:text="@string/report_problemdes"/>

        <TextView
            android:layout_marginTop="6dp"
            android:id="@+id/tv_send_detail_diseasedes"
            android:textSize="20sp"
            android:text="miaoshu"
            android:layout_below="@+id/tv_send_detail_address1"
            android:layout_toRightOf="@+id/tv_send_detail_diseasedestitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_send_detail_reporteiamg_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_send_detail_diseasedes"
            android:layout_marginTop="6dp"
            android:text="上报图片："
            android:textColor="@color/cc_text_blank"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/ll_iv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_send_detail_reporteiamg_title"
            android:padding="6dp"
            android:background="@drawable/shape_uncheck_information"
            android:orientation="horizontal">

            <ImageView
                android:scaleType="fitXY"

                android:id="@+id/iv_send_detail_photo1"
                android:layout_width="100dp"
                android:layout_height="120dp" />

            <ImageView
                android:scaleType="fitXY"
                android:id="@+id/iv_send_detail_photo2"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:layout_marginLeft="8dp" />

            <ImageView
                android:scaleType="fitXY"
                android:id="@+id/iv_send_detail_photo3"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:layout_marginLeft="8dp" />

        </LinearLayout>

        <Button
            android:visibility="gone"
            android:id="@+id/bt_send_detail_back"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="6dp"
            android:layout_below="@+id/ll_iv"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_positive"
            android:text="返回"
            android:textColor="@color/white" />

    </RelativeLayout>
</ScrollView>